infra/policies/kyverno/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
  namespace: kyverno
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: no-privileged-containers
      match:
        resources:
          kinds:
            - Pod
            - Deployment
            - StatefulSet
            - DaemonSet
      validate:
        message: "Privileged containers are not allowed."
        pattern:
          spec:
            =(initContainers):
              - securityContext:
                  =(privileged): false
            containers:
              - securityContext:
                  =(privileged): false

    - name: no-privilege-escalation
      match:
        resources:
          kinds:
            - Pod
            - Deployment
            - StatefulSet
            - DaemonSet
      validate:
        message: "Privilege escalation is not allowed."
        pattern:
          spec:
            =(initContainers):
              - securityContext:
                  =(allowPrivilegeEscalation): false
            containers:
              - securityContext:
                  =(allowPrivilegeEscalation): false
